2013-07-25  Ivan Vucica <ivan@vucica.net>

	* Source/opal/OpalContext.m:
	Pushing -DPSgsave: and -DPSgrestore: to OpalGState.

	* Source/opal/OpalSurface.m:
	-Disabled doublebuffering temporarily.
	-Work on fixing doublebuffering, including creating subimage
	 properly.
	-Richer debug image output code, plus saving as PNGs.

	* Source/opal/OpalGState.m:
	-DPSfill
	-Setting color now also sets stroke color.
	-Corrected name for -DPSgsave and -DPSgrestore.
	-Implemented -saveClip, -restoreClip.
	-Implemented -DPSeoclip and -DPSeofill.
	-Added dummy DPSshow:, GSShowText:: etc.
	-Implemented -DPScurrentpoint:: so that superclass's
	 DPSrlineto:: works.

	* Headers/opal/OpalSurface.h:
	Added -createCGContexts to header to fix a warning.

2013-07-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/w32_movesize.m (-decodeWM_EXITSIZEMOVEParams:::):
	Remove code that caused missing windows content.
	* Source/cairo/CairoContext.m (-flushGraphics): Add experimental
	flush code for Windows.
	* Source/cairo/Win32CairoSurface.m (-initWithDevice:, -dealloc):
	Clean up HDC handling. Based on patch by Marcian Lytwyn <marcian.lytwyn@advcsi.com>

2013-07-24  Ivan Vucica <ivan@vucica.net>

	* configure.ac:
	* configure:
	Opal backend depends on both Opal and CoreBase. Added
	CoreBase to list of libraries we link with.

	* Source/opal/OpalFontInfo.m:
	* Source/opal/OpalFontEnumerator.m:
	Switched to NSDebugLLog().

	* Source/opal/OpalGState.m:
	-Switched to NSDebugLLog().
	-Fixed DPSimage method's conversion of NSAffineTransform to
	 CGAffineTransform
	-Implemented GSCurrentCTM
	-Implemented flushGraphics
	-Implemented DPSsavegstate and DPSrestoregstate

	* Source/opal/OpalSurface.m:
	-Switched to NSDebugLLog().
	-Fixed section that is supposed to write out the debug image.

2013-07-21  Ivan Vucica <ivan@vucica.net>

	* Source/opal/OpalFontInfo.m:
	* Source/opal/OpalFontEnumerator.m:
	Some hacks to figure out how NSMenuItem's width is determined,